unpackaged/main/default/objects/Customer_Invoice_Plan_Line__c/Customer_Invoice_Plan_Line__c.object-meta.xml
<CustomObject>
    <label>Customer Invoice Plan Line</label>
    <nameField>
        <label>Customer Invoice Plan Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Invoice Plan Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>