unpackaged/main/default/objects/Customer_Invoice_Plan_Line__c/fields/Commitment_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Rebate__c</fullName>
    <description>Must be negative, works when quote has quote line of commitment rebate category.</description>
    <inlineHelpText>Must be negative, works when quote has quote line of commitment rebate category.</inlineHelpText>
    <label>Commitment Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>