unpackaged/main/default/objects/Customer_Invoice_Plan_Line__c/fields/Customer_Invoice_Plan__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice_Plan__c</fullName>
    <label>Customer Invoice Plan</label>
    <referenceTo>Customer_Invoice_Plan__c</referenceTo>
    <relationshipLabel>Customer Invoice Plan Lines</relationshipLabel>
    <relationshipName>Customer_Invoice_Plan_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>