unpackaged/main/default/objects/Customer_Invoice_Plan_Line__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <description>Used to insert into Quote document</description>
    <formula>TEXT(Customer_Invoice_Plan__r.Fee_Type__c)</formula>
    <inlineHelpText>Used to insert into Quote document</inlineHelpText>
    <label>Fee Type</label>
    <type>Text</type>
</CustomField>