unpackaged/main/default/objects/Customer_Invoice_Plan_Line__c/fields/Processing_Order__c.field-meta.xml
<CustomField>
    <fullName>Processing_Order__c</fullName>
    <label>Processing Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>