unpackaged/main/default/objects/Customer_Invoice_Plan_Line__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <description>Purchase order number replaces the standard PO number field.</description>
    <label>Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>