unpackaged/main/default/objects/Customer_Invoice_Plan_Line__c/validationRules/Amount_Type_Line_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Type_Line_Positive</fullName>
    <active>true</active>
    <description>Amount should be positive for customer invoice plan line with type = Amount</description>
    <errorConditionFormula>AND(
ISPICKVAL( Type__c , &#39;Amount&#39;),
Amount__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount should be positive when Type is Amount</errorMessage>
</ValidationRule>