unpackaged/main/default/objects/Customer_Invoice_Plan_Line__c/validationRules/Commitment_Rebate_Not_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Commitment_Rebate_Not_Positive</fullName>
    <active>true</active>
    <description>Commitment Rebate should not be positive.</description>
    <errorConditionFormula>Commitment_Rebate__c &gt; 0</errorConditionFormula>
    <errorDisplayField>Commitment_Rebate__c</errorDisplayField>
    <errorMessage>Commitment Rebate should not be positive.</errorMessage>
</ValidationRule>